fix: scrolling stuck and md screen layout shift

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,6 +7,8 @@
 }
 
 .logo {
+    position: relative;
+    z-index: 1;
     will-change: filter;
     transition: 300ms;
     user-select: none;
